Fix JDK11 breaking changes