@@ -37,6 +37,12 @@ run / fork := true
 
 run / javaOptions ++= Seq("-Xmx1G")
 
+javacOptions ++= Seq(
+  "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+  "--add-exports=java.unsupported/sun.misc=ALL-UNNAMED",
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+)
+
 publishMavenStyle := true
 
 Test / publishArtifact := false
